<resources>
    <string name="app_name">Inventory App</string>

    <string name="empty_view_title_text">No items found</string>
    <string name="empty_view_subtitle_text">Click on lower right button to add an item</string>

    <string name="category_product_details">Product Details</string>
    <string name="hint_product_name">Name</string>
    <string name="unit_product_price">₹</string>
    <string name="hint_product_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="quantity_decrement">-</string>
    <string name="initial_quantity_value">2</string>
    <string name="quantity_increment">+</string>
    <string name="category_supplier_details">Supplier Details</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone_number">Phone Number</string>

    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_order_from_supplier">Order from supplier</string>

    <string name="editor_activity_title_new_product">Add a product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="delete_dialog_message">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_message">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="product_out_of_stock">Product is out of stock</string>
    <string name="error_invalid_values">Please provide valid values</string>
    <string name="negative_quantity">Cannot give negative quantity</string>

</resources>
