<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product_details" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_left_padding">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/layout_left_padding">

                <TextView
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_product_price" />

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="number"
                    android:paddingLeft="@dimen/normal_padding" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/layout_left_padding">

            <Button
                android:id="@+id/decrement"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginRight="@dimen/button_margin"
                android:text="@string/quantity_decrement" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_quantity_value"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/increment"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="@dimen/button_margin"
                android:text="@string/quantity_increment" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_details" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_left_padding">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="phone" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>